--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,292 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html,
+body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/* Your code starts here! */
+
+.container {
+    width: 880px;
+    /* TB LR */
+    margin: 0 auto;
+    /* padding: 5px 250px; */
+    /* display: flex;
+	flex-wrap: wrap; */
+    /* border: 2px solid red; */
+}
+
+nav {
+    position: fixed;
+    background: white;
+    top: 0;
+    width: 880px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 2px solid red; */
+}
+
+nav a {
+    margin: 20px 20px;
+    text-decoration: none;
+    color: gray;
+    /* border: 2px solid red; */
+}
+
+.nav-img {
+    /* border: 2px solid red; */
+}
+
+header {
+    border-bottom: 2px solid gray;
+    margin: 100px 0 0 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.header-left {
+    text-align: center;
+    /* border: 2px solid red; */
+}
+
+header h1 {
+    width: 100%;
+    font-size: 65px;
+    text-align: center;
+    padding: 0 70px 0 70px;
+    /* border: 2px solid red; */
+}
+
+button {
+    width: 135px;
+    height: 30px;
+    font-size: 15px;
+    background: white;
+    border: 1px solid black;
+}
+
+header img {
+    padding: 70px;
+    /* border: 2px solid red; */
+}
+
+.top-section {
+    padding: 30px 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.top-section .left {
+    margin-right: 20px;
+    /* border: 2px solid red; */
+}
+
+.top-section .right {
+    /* border: 2px solid red; */
+}
+
+.middle-img {
+    width: 100%;
+}
+
+.bottom-section {
+    border-bottom: 2px solid gray;
+    padding: 30px 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.bottom-left {
+    /* border: 2px solid red; */
+}
+
+.bottom-middle {
+    margin: 0 20px;
+    /* border: 2px solid red; */
+}
+
+.bottom-right {
+    /* border: 2px solid red; */
+}
+
+.contact {
+    display: flex;
+    justify-items: space-evenly;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 150px;
+    margin: 30px 0 0 0;
+    /* border: 2px solid red; */
+}
+
+.contact p {
+    padding: 5px 0 10px 0;
+    /* border: 2px solid red; */
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    /* border: 2px solid red; */
+}
