--- a/css/index.css
+++ b/css/index.css
@@ -171,6 +171,12 @@ h5 {
     /* border: 2px solid red; */
 }
 
+@media (max-width: 800px) {
+    .container {
+        width: 98%;
+    }
+}
+
 nav {
     position: fixed;
     background: white;
@@ -182,6 +188,15 @@ nav {
     /* border: 2px solid red; */
 }
 
+@media (max-width: 800px) {
+    nav {
+        width: 98%;
+        position: relative;
+        justify-content: space-around;
+        height: 50px;
+    }
+}
+
 nav a {
     margin: 67px 0px;
     text-decoration: none;
@@ -189,8 +204,28 @@ nav a {
     /* border: 2px solid red; */
 }
 
-.nav-img {
-    /* border: 2px solid red; */
+/* Hiding nav img for desktop */
+@media (min-width: 801px) {
+    .nav-img-Tablet {
+        display: none;
+        /* border: 2px solid red; */
+    }
+}
+
+@media (max-width: 800px) {
+    .nav-img-Tablet {
+        display: flex;
+        justify-content: center;
+        /* margin: 0 auto; */
+        /* border: 2px solid red; */
+        margin: 25px 0;
+    }
+}
+
+@media (max-width: 800px) {
+    .nav-img {
+        display: none;
+    }
 }
 
 header {
@@ -199,6 +234,13 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+@media (max-width: 800px) {
+    header {
+        margin: 0 0 0px 0;
+        padding: 20px 0 50px 0;
+    }
 }
 
 .header-left {
@@ -210,6 +252,13 @@ header {
     justify-content: center;
     align-items: center;
     /* border: 2px solid red; */
+}
+
+@media (max-width: 800px) {
+    .header-left {
+        margin: 0px;
+        padding: 27px;
+    }
 }
 
 header h1 {
@@ -232,6 +281,12 @@ button {
 header img {
     padding: 63px 63px 63px 79px;
     /* border: 2px solid red; */
+}
+
+@media (max-width: 800px) {
+    header img {
+        display: none;
+    }
 }
 
 .top-section {
