--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,13 @@ h5 {
 
 @media (max-width: 800px) {
     .container {
-        width: 98%;
+        width: 95%;
+    }
+}
+
+@media (max-width: 500px) {
+    .container {
+        width: 95%;
     }
 }
 
@@ -191,9 +197,17 @@ nav {
 @media (max-width: 800px) {
     nav {
         width: 98%;
-        position: relative;
+        position: static;
         justify-content: space-around;
         height: 50px;
+    }
+}
+
+@media(max-width: 500px) {
+    nav {
+        flex-direction: column;
+        /* border: 2px solid red; */
+        height: 98%;
     }
 }
 
@@ -202,6 +216,21 @@ nav a {
     text-decoration: none;
     color: gray;
     /* border: 2px solid red; */
+}
+
+@media(max-width: 500px) {
+    nav a {
+        margin: 0px;
+        padding: 20px;
+        font-size: 20px;
+        border-bottom: 1px solid gray;
+        width: 98%;
+        text-align: center;
+    }
+
+    nav a:first-child {
+        border-top: 1px solid gray;
+    }
 }
 
 /* Hiding nav img for desktop */
@@ -296,6 +325,15 @@ header img {
     align-items: center;
 }
 
+@media (max-width: 500px) {
+    .top-section {
+        flex-direction: column;
+        /* justify-content: space-around;
+        align-items: space-around;
+        flex-wrap: nowrap; */
+    }
+}
+
 .top-section .left {
     margin-right: 20px;
     /* border: 2px solid red; */
@@ -305,8 +343,16 @@ header img {
     /* border: 2px solid red; */
 }
 
+@media (max-width: 500px) {
+
+    .top-section .left,
+    .top-section .right {
+        margin: 20px 0;
+    }
+}
+
 .middle-img {
-    width: 100%;
+    width: 98%;
 }
 
 .bottom-section {
@@ -315,6 +361,12 @@ header img {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+@media (max-width: 500px) {
+    .bottom-section {
+        flex-direction: column;
+    }
 }
 
 .bottom-left {
@@ -328,6 +380,15 @@ header img {
 
 .bottom-right {
     /* border: 2px solid red; */
+}
+
+@media (max-width: 500px) {
+
+    .bottom-left,
+    .bottom-middle,
+    .bottom-right {
+        margin: 20px 0;
+    }
 }
 
 .contact {
